--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #7700ee;
+  background-color: #FF914D;
   color: #fff;
   overflow-x: hidden;
 }
@@ -15,11 +15,20 @@ body {
 
 h1 {
   font-size: 5rem;
+  font-family: 'Chewy', cursive;
 }
 @media screen and (max-width: 768px) {
   h1 {
     font-size: 3rem;
   }
+}
+
+.logo-container{
+  justify-content: center;
+}
+
+.logo {
+  max-width: 256px;
 }
 
 .unsupported-network {
@@ -93,7 +102,8 @@ h1 {
 
 .member-page form h5 {
   margin-top: 0;
-  color: #7700ee;
+  color: #FF914D;
+  font-weight: 900;
 }
 
 .member-page form .card > div {
@@ -138,4 +148,25 @@ button:focus {
 button:disabled {
   opacity: 0.8;
   pointer-events: none;
+}
+
+.twitter-logo {
+  width: 35px;
+  height: 35px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  /* padding-bottom: 45px; */
+}
+
+.footer-text {
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
 }
